# rhiza

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml
bench/: README.md  run-recorder-sync-linux.py  sql-kv-results-2026-07-19.md  strong-read-results-2026-07-19.md
bench/hiqlite-recovery-client/: Cargo.toml  Dockerfile.server  README.md  hiqlite-proxy-axum8.patch
bench/hiqlite-recovery-client/src/: main.rs
bench/src/: cost.rs  lib.rs  main.rs
crates/queqlite-archive/src/: lib.rs
crates/queqlite-archive/tests/: contracts.rs
crates/queqlite-cli/: Cargo.toml
crates/queqlite-cli/src/: main.rs
crates/queqlite-core/: Cargo.toml  README.md
crates/queqlite-core/src/: lib.rs
crates/queqlite-core/tests/: contracts.rs
crates/queqlite-node/: Cargo.toml
crates/queqlite-node/src/: admin.rs  durability.rs  lib.rs
crates/queqlite-node/tests/: admin_http.rs  configuration.rs  durability.rs
crates/queqlite-obj-store/src/: lib.rs
crates/queqlite-obj-store/tests/: contracts.rs
crates/queqlite-quepaxa/: Cargo.toml  README.md
crates/queqlite-quepaxa/examples/: local_three_node.rs
crates/queqlite-quepaxa/src/: lib.rs
crates/queqlite-quepaxa/tests/: dynamic_membership.rs  genuine_quepaxa.rs
crates/queqlite-testkit/: Cargo.toml
crates/queqlite-testkit/src/: lib.rs
crates/queqlite-testkit/tests/: contracts.rs
crates/queqlite/src/: lib.rs
crates/queqlite/tests/: embedded.rs
crates/rhiza/: Cargo.toml
crates/rhiza-archive/: Cargo.toml
crates/rhiza-archive/src/: lib.rs
crates/rhiza-cli/: Cargo.toml
crates/rhiza-cli/src/: main.rs
crates/rhiza-client/: Cargo.toml
crates/rhiza-client/src/: lib.rs
crates/rhiza-core/: Cargo.toml
crates/rhiza-core/src/: lib.rs
crates/rhiza-graph/src/: control.rs  lgfx.rs  lib.rs
crates/rhiza-graph/tests/: lgfx_state_machine.rs
crates/rhiza-kv/: Cargo.toml
crates/rhiza-kv/src/: lib.rs
crates/rhiza-kv/tests/: batching.rs
crates/rhiza-log/: Cargo.toml
crates/rhiza-node/: Cargo.toml
crates/rhiza-node/src/: durability.rs  lib.rs  recorder_tcp.rs
crates/rhiza-node/src/recorder_tcp/: postcard_rpc.rs
crates/rhiza-node/tests/: checkpoint_http.rs  configuration.rs  contracts.rs  durability.rs  graph_runtime.rs  kv_runtime.rs  recorder_postcard_rpc.rs  recorder_tcp.rs  recovery_anchor.rs
crates/rhiza-obj-store/: Cargo.toml
crates/rhiza-quepaxa/: Cargo.toml  README.md
crates/rhiza-quepaxa/examples/: recorder_sync_bench.rs
crates/rhiza-quepaxa/src/: lib.rs
crates/rhiza-quepaxa/tests/: adversarial_agreement.rs  genuine_quepaxa.proptest-regressions  genuine_quepaxa.rs  recorder_durability_fast_path.rs
crates/rhiza-sql/: Cargo.toml
crates/rhiza-sql/src/: control.rs  lib.rs  page_state.rs  qwal.rs  qwal_vfs.rs  wal_capture.rs
crates/rhiza-sql/tests/: contracts.rs  qwal_contracts.rs
crates/rhiza/examples/: basic_app_server.rs
crates/rhiza/src/: lib.rs
crates/rhiza/tests/: embedded.rs
deploy/k8s/: hiqlite-recovery-cluster.yaml  hiqlite-recovery-rustfs.yaml  queqlite-admin-job.yaml  queqlite-checkpoint-job.yaml  queqlite-cluster.yaml  rustfs-e2e.yaml
docs/: failover-throughput-optimization-2026-07-12.md  ha-sql-benchmark-2026-07-12.md  hiqlite-sql-message-review.md  ladybug-construction-time-vfs-change-design.md  ladybug-rust-cxx-vfs-change-design.md  ladybug-wal-replication-design.md  quepaxa-paper-conformance-2026-07-12.md  sqlite-wal-replication-design.md  strong-read-read-only-fence-plan-2026-07-18.md  three-peer-emptydir-recovery-2026-07-19.md
scripts/: bench-vind.sh  check-bench-vind-static.sh  check-deploy.sh  check-e2e-hiqlite-recovery-static.sh  check-e2e-recovery-matrix-static.sh  check-quepaxa-package.sh  e2e-hiqlite-recovery.sh  e2e-vind-rustfs.sh  gc-k8s.sh  k8s-admin-job.sh  k8s-object-job.sh  k8s-stop-state.sh  render-k8s-config.sh  replace-k8s-config.sh  wait-k8s-statefulset-ready.sh
scripts/test-fixtures/: config-4-predecessor.json  config-4-wrong-successor.json  kubectl-preflight-failure.sh  kubectl-transient.sh
