[workspace]
members = [
    "crates/rhiza",
    "crates/rhiza-archive",
    "crates/rhiza-client",
    "crates/rhiza-cli",
    "crates/rhiza-core",
    "crates/rhiza-graph",
    "crates/rhiza-kv",
    "crates/rhiza-log",
    "crates/rhiza-node",
    "crates/rhiza-obj-store",
    "crates/rhiza-quepaxa",
    "crates/rhiza-sql",
    "crates/rhiza-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/mrchypark/rhiza"
rust-version = "1.89"

[workspace.dependencies]
axum = "0.8"
bytes = "1"
futures = "0.3"
getrandom = "0.3"
object_store = { version = "0.14.0", features = ["aws", "azure", "gcp"] }
postcard = { version = "1", features = ["alloc"] }
postcard-rpc = { version = "=0.12.1", features = ["use-std"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rusqlite = { version = "0.40.1", features = ["bundled", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1.52.3", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
