[package]
name = "hiqlite-recovery-client"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
# Hiqlite's bincode network enums are feature-gated.  A remote client must use
# the same wire schema as the `server` binary, whose feature expands to `full`.
hiqlite = { git = "https://github.com/sebadob/hiqlite.git", rev = "c8316c53799c509990475ea8e2aa2ef8679e070e", default-features = false, features = ["full"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
