[package]
name = "queqlite-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
queqlite-archive = { path = "../queqlite-archive" }
queqlite-core = { path = "../queqlite-core" }
queqlite-node = { path = "../queqlite-node" }
queqlite-obj-store = { path = "../queqlite-obj-store" }
queqlite-quepaxa = { path = "../queqlite-quepaxa" }
queqlite-sqlite = { path = "../queqlite-sqlite" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal", "time"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "queqlite"
path = "src/main.rs"
