[package]
name = "queqlite-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
queqlite-archive = { path = "../queqlite-archive" }
queqlite-core = { path = "../queqlite-core" }
queqlite-log = { path = "../queqlite-log" }
queqlite-obj-store = { path = "../queqlite-obj-store" }
queqlite-quepaxa = { path = "../queqlite-quepaxa" }
queqlite-sqlite = { path = "../queqlite-sqlite" }
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
