[package]
name = "rhiza-archive"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Archive import and export support for rhiza"

[dependencies]
rhiza-core = { version = "0.1.1", path = "../rhiza-core" }
rhiza-log = { version = "0.1.1", path = "../rhiza-log" }
rhiza-obj-store = { version = "0.1.1", path = "../rhiza-obj-store" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
