[package]
name = "rhiza-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sql", "graph", "kv"]
sql = ["dep:rhiza-sql", "rhiza-client/sql", "rhiza-node/sql"]
graph = ["rhiza-client/graph", "rhiza-node/graph"]
kv = ["rhiza-client/kv", "rhiza-node/kv"]
recorder-postcard-rpc = ["rhiza-node/recorder-postcard-rpc"]

[dependencies]
axum.workspace = true
rhiza-client = { path = "../rhiza-client", default-features = false }
rhiza-archive = { path = "../rhiza-archive" }
rhiza-core = { path = "../rhiza-core" }
rhiza-log = { path = "../rhiza-log" }
rhiza-node = { path = "../rhiza-node", default-features = false }
rhiza-obj-store = { path = "../rhiza-obj-store" }
rhiza-quepaxa = { path = "../rhiza-quepaxa" }
rhiza-sql = { path = "../rhiza-sql", optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal", "time"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "rhiza"
path = "src/main.rs"
