[package]
name = "rhiza-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sql"]
sql = ["rhiza-node/sql", "dep:rhiza-sql"]
graph = ["rhiza-node/graph"]
kv = ["rhiza-node/kv"]

[dependencies]
reqwest.workspace = true
rhiza-core = { path = "../rhiza-core" }
rhiza-node = { path = "../rhiza-node", default-features = false }
rhiza-sql = { path = "../rhiza-sql", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
