[package]
name = "rhiza-kv"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "redb materialized state machine for rhiza kv"

[dependencies]
rhiza-core = { path = "../rhiza-core" }
rhiza-log = { path = "../rhiza-log" }
redb = "=4.1.0"
tempfile.workspace = true
