[package]
name = "rhiza-node"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Network node runtime for rhiza"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("graph", "kv"))'] }

[features]
default = ["sql"]
sql = []
recorder-postcard-rpc = ["dep:postcard-rpc", "dep:tracing"]

[dependencies]
rhiza-archive = { version = "0.1.1", path = "../rhiza-archive" }
rhiza-core = { version = "0.1.1", path = "../rhiza-core" }
rhiza-log = { version = "0.1.1", path = "../rhiza-log" }
rhiza-obj-store = { version = "0.1.1", path = "../rhiza-obj-store" }
rhiza-quepaxa = { version = "0.1.1", path = "../rhiza-quepaxa" }
rhiza-sql = { version = "0.1.1", path = "../rhiza-sql" }
axum.workspace = true
postcard.workspace = true
postcard-rpc = { workspace = true, optional = true }
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.14"
tempfile.workspace = true
tower.workspace = true
