[package]
name = "rhiza-obj-store"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Object storage abstractions for rhiza"

[dependencies]
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
