[package]
name = "rhiza-quepaxa"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Transport-independent QuePaxa consensus engine used by rhiza"
readme = "README.md"
keywords = ["consensus", "quepaxa", "distributed-systems"]
categories = ["algorithms", "database"]

[dependencies]
getrandom.workspace = true
rhiza-core = { version = "0.1.1", path = "../rhiza-core" }
serde.workspace = true

[dev-dependencies]
proptest = "1"
serde_json.workspace = true
tempfile.workspace = true
