[package]
name = "rhiza-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fallible-streaming-iterator = "0.1"
postcard.workspace = true
rhiza-core = { path = "../rhiza-core" }
rhiza-log = { path = "../rhiza-log" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest = "1"
