[package]
name = "rhiza-sql"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQLite materialized state machine for rhiza"

[dependencies]
fallible-streaming-iterator = "0.1"
postcard.workspace = true
rhiza-core = { version = "0.1.1", path = "../rhiza-core" }
rhiza-log = { version = "0.1.1", path = "../rhiza-log" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest = "1"
