[package]
name = "rhiza"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
graph = ["dep:rhiza-graph", "rhiza-node/graph"]
kv = ["dep:rhiza-kv", "rhiza-node/kv"]

[dependencies]
rhiza-core = { path = "../rhiza-core" }
rhiza-graph = { path = "../rhiza-graph", optional = true }
rhiza-kv = { path = "../rhiza-kv", optional = true }
rhiza-node = { path = "../rhiza-node", default-features = false, features = ["sql"] }
rhiza-quepaxa = { path = "../rhiza-quepaxa" }
rhiza-sql = { path = "../rhiza-sql" }
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
rhiza-archive = { path = "../rhiza-archive" }
rhiza-obj-store = { path = "../rhiza-obj-store" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower.workspace = true
