[package]
name = "rhizadb"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Embeddable facade for rhiza replicated state machines"

[lib]
name = "rhizadb"

[dependencies]
rhiza-core = { version = "0.1.1", path = "../rhiza-core" }
rhiza-node = { version = "0.1.1", path = "../rhiza-node" }
rhiza-quepaxa = { version = "0.1.1", path = "../rhiza-quepaxa" }
rhiza-sql = { version = "0.1.1", path = "../rhiza-sql" }
tokio.workspace = true

[dev-dependencies]
rhiza-archive = { version = "0.1.1", path = "../rhiza-archive" }
rhiza-obj-store = { version = "0.1.1", path = "../rhiza-obj-store" }
tempfile.workspace = true
